--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Dev Previews</title>
   </head>
   <body>
-    <a href="dev.robyte.me/tictactoe">Tic Tac Toe</a>
+    <a href="/tictactoe">Tic Tac Toe</a>
   </body>
 </html>
