--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Previews</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="/tictactoe">Tic Tac Toe</a>
+    <h1 class="title">WEB APPS</h1>
+    <div class="project-container"></div>
+    <script src="app.js"></script>
   </body>
 </html>
