added some sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   </head>
   <body>
     <h1 class="title">WEB APPS</h1>
-    <div class="project-container"></div>
+    <div class="project-container web-container"></div>
+
+    <h1 class="title">DESKTOP APPS</h1>
+    <div class="project-container desktop-container"></div>
+
+    <h1 class="title">MOBILE APPS</h1>
+    <div class="project-container mobile-container"></div>
+
+    <h1 class="title">COMMAND LINE TOOLS</h1>
+    <div class="project-container clt-container"></div>
+
     <script src="app.js"></script>
   </body>
 </html>
